# MBseqv4pEditor

./: .gitignore  README.md  controller.py  helpers.py  layers.py  mbs4edit.py  mbs4edit_sh.py  observer.py  pyproject.toml  step_buffer.py  track_cc.py  track_gui.py
mbseqv4p_editor/: controller.py  helpers.py  layers.py  mbs4edit.py  mbs4edit_sh.py  observer.py  step_buffer.py  track_cc.py  track_gui.py
mbseqv4p_editor/model/: configfile.py  mixer_map.py  pattern.py  sdcard.py  session.py  song.py  track.py
mbseqv4p_editor/view_tk/: editabletreeview.py  main_app.py  menus.py  mixer_map_tv.py  pattern.py  phrase_bar.py  scrolledtreeview.py  session.py  song_tv.py  step_edit.py  track_config.py  tracks.py
model/: configfile.py  mixer_map.py  pattern.py  sdcard.py  session.py  song.py  track.py
view_tk/: editabletreeview.py  main_app.py  menus.py  mixer_map_tv.py  pattern.py  phrase_bar.py  scrolledtreeview.py  session.py  song_tv.py  step_edit.py  track_config.py  tracks.py
